<resources>
    <string name="app_name">FlapperSnapper</string>
    <string name="welcome">Welcome to FlapperSnapper!</string>
    <string name="action_home">Home</string>
    <string name="speciesTV">Species:</string>
    <string name="speciesHint">Enter Bird Species</string>
    <string name="sexTV">Sex:</string>
    <string name="ageTV">Age:</string>
    <string name="ageAdultRB">Adult</string>
    <string name="ageJuvenileRB">Juvenile</string>
    <string name="saveBtn">Save</string>
    <string name="emptyListLbl">You have not logged any sightings yet</string>
    <string name="disconnect">Disconnect Account</string>
    <string name="menu_clear_list">Clear List</string>
    <string name="menu_log_out">Log Out</string>

    <string-array name="sex_array">
        <item>Male</item>
        <item>Female</item>
        <item>Not Sure</item>
    </string-array>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="nav_menu_home">Home</string>
    <string name="nav_menu_addBird">Log a Bird Sighting</string>
    <string name="nav_menu_map">Map View</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="title_activity_home1">Home1</string>
    <string name="nav_subtitle">Communicate</string>

    <string name="map_title">Bird Sighting Map</string>
    <string name="google_maps_key">AIzaSyCJbRQXkFyAbsw08dHxPoPgHIfxNiFbcYM</string>

</resources>
