<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="ie.kf.activities.Home">

    <item
        android:id="@+id/action_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:onClick="menuHome"
        android:orderInCategory="100"
        android:title="@string/action_home"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/menu_clear_list"
        android:onClick="menuClear"
        android:orderInCategory="100"
        android:title="@string/menu_clear_list"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_log_out"
        android:onClick="menuSignOut"
        android:orderInCategory="100"
        android:title="@string/menu_log_out"
        app:showAsAction="never" />

</menu>
